[gd_scene load_steps=9 format=3 uid="uid://ce2jro1mwr04s"]

[ext_resource type="Script" path="res://Scenes/map_selection/map_selection.gd" id="1_77iun"]
[ext_resource type="FontFile" uid="uid://b2ujavy03cxpx" path="res://Fonts/Minecraftia-Regular.ttf" id="1_ogesc"]
[ext_resource type="PackedScene" uid="uid://dgygkbtm0burn" path="res://addons/quiver_leaderboards/leaderboard_ui.tscn" id="3_ul78g"]

[sub_resource type="Animation" id="Animation_de38n"]
resource_name = "Back"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100), Vector2(0, 650)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 272), Vector2(0, 172), Vector2(0, 922)]
}

[sub_resource type="Animation" id="Animation_q1ys4"]
resource_name = "Fade In"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 680), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_c6gxk"]
resource_name = "Fade Out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_7veqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -0.085)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 272)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 680)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wtgx0"]
_data = {
"Back": SubResource("Animation_de38n"),
"Fade In": SubResource("Animation_q1ys4"),
"Fade Out": SubResource("Animation_c6gxk"),
"RESET": SubResource("Animation_7veqb")
}

[node name="MapSelection" type="Node2D"]
position = Vector2(0, 680)
script = ExtResource("1_77iun")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2015, 0.39585, 0.65, 1)

[node name="Title" type="Label" parent="."]
offset_top = -0.085
offset_right = 1152.0
offset_bottom = 190.915
theme_override_colors/font_color = Color(0, 0.748136, 0.913787, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_ogesc")
theme_override_font_sizes/font_size = 100
text = "Speedrun  Maps"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 272.0
offset_right = 1152.0
offset_bottom = 552.0
scale = Vector2(1.2, 1.2)
metadata/_edit_use_anchors_ = true

[node name="Map1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 166.667
offset_top = 40.0
offset_right = 422.667
offset_bottom = 168.0
theme_override_colors/font_color = Color(0, 0.462745, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_ogesc")
theme_override_font_sizes/font_size = 60
text = "MAP 1"
metadata/_edit_use_anchors_ = true

[node name="Highscore" type="Label" parent="Control/Map1"]
layout_mode = 0
offset_top = 128.0
offset_right = 9.0
offset_bottom = 154.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ogesc")
theme_override_font_sizes/font_size = 40
metadata/_edit_use_anchors_ = true

[node name="Local Multiplayer" type="Button" parent="Control/Map1"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0117188
anchor_top = -0.40625
anchor_right = -0.0117188
anchor_bottom = -1.03906
offset_right = 256.0
offset_bottom = 128.0
theme_override_colors/font_color = Color(0, 0.462745, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_ogesc")
theme_override_font_sizes/font_size = 15
text = "Local Multiplayer"
metadata/_edit_use_anchors_ = true

[node name="Map2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 550.667
offset_top = 40.0
offset_right = 806.667
offset_bottom = 168.0
theme_override_colors/font_color = Color(0, 0.462745, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_ogesc")
theme_override_font_sizes/font_size = 60
text = "MAP 2"
metadata/_edit_use_anchors_ = true

[node name="Local Multiplayer2" type="Button" parent="Control/Map2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.5
anchor_top = -0.40625
anchor_right = 1.5
anchor_bottom = -1.03906
offset_left = -384.0
offset_right = -128.0
offset_bottom = 128.0
theme_override_colors/font_color = Color(0, 0.462745, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_ogesc")
theme_override_font_sizes/font_size = 15
disabled = true
text = "Local Multiplayer"
metadata/_edit_use_anchors_ = true

[node name="Highscore" type="Label" parent="Control/Map2"]
layout_mode = 0
offset_top = 128.0
offset_right = 9.0
offset_bottom = 154.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ogesc")
theme_override_font_sizes/font_size = 40
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="Control"]
layout_mode = 0
offset_left = 853.333
offset_top = 260.0
offset_right = 953.333
offset_bottom = 307.0
theme_override_fonts/font = ExtResource("1_ogesc")
text = "BACK"
metadata/_edit_use_anchors_ = true

[node name="Leaderboard" type="Button" parent="Control"]
layout_mode = 0
offset_left = 6.66667
offset_top = 273.333
offset_right = 103.667
offset_bottom = 303.333
theme_override_fonts/font = ExtResource("1_ogesc")
text = "Leaderboard"
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wtgx0")
}
autoplay = "Fade In"
speed_scale = 1.5

[node name="Leaderboard" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="LeaderboardUI" parent="Leaderboard" instance=ExtResource("3_ul78g")]
layout_mode = 1
leaderboard_id = "aquarun-map1-fastest-ti-Tov4"
score_limit = 15

[node name="Button" type="Button" parent="Leaderboard/LeaderboardUI"]
layout_mode = 0
offset_right = 56.0
offset_bottom = 48.0
text = "CLOSE"

[connection signal="pressed" from="Control/Map1" to="." method="_on_map_1_pressed"]
[connection signal="pressed" from="Control/Map1/Local Multiplayer" to="." method="_on_local_multiplayer_pressed"]
[connection signal="pressed" from="Control/Map2" to="." method="play_fade_out"]
[connection signal="pressed" from="Control/Map2" to="." method="_on_map_2_pressed"]
[connection signal="pressed" from="Control/Map2/Local Multiplayer2" to="." method="_on_map_1_pressed"]
[connection signal="pressed" from="Control/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="Leaderboard/LeaderboardUI/Button" to="." method="_on_close_pressed"]
